Added the AbstractAuthSystemTest trait that can be used to test auth system on the project. The logic of authentication has been replaced from middleware into the separate class.

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     },
     "require-dev": {
         "ext-dom": "*",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "californiamountainsnake/laravel-database-test-case": "~0.1.0"
     },
     "autoload": {
         "psr-4": {
