Fixed a bug with the AuthenticationException::fromMessages().

--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,9 @@
         "ext-json": "*",
         "myclabs/php-enum": "~1.5",
         "laravel/framework": "~5.7",
+        "californiamountainsnake/json-response": "~1.0.1",
         "californiamountainsnake/php-database-entities": "~1.0.0",
-        "californiamountainsnake/json-response": "~1.0.0"
+        "californiamountainsnake/php-utils": "~1.0.7"
     },
     "require-dev": {
         "ext-dom": "*",
