Added the possibility to set a hash function for api_token request param. Added the support of laravel framework 6 and 7.

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": "^7.2",
         "ext-json": "*",
         "myclabs/php-enum": "~1.5",
-        "laravel/framework": "~5.7",
+        "laravel/framework": "~5.7|~6.0|~7.0",
         "californiamountainsnake/json-response": "~1.0.1",
         "californiamountainsnake/php-database-entities": "~1.0.0",
         "californiamountainsnake/php-utils": "~1.0.7"
